I'm about to try the drag and drop and might mess everything up.

--- a/src/components/Tutors/TutorList.css
+++ b/src/components/Tutors/TutorList.css
@@ -1,5 +1,5 @@
 body {
-    background: url(https://wallpapers.com/images/high/writing-background-534lttq2mrbgjhjp.webp) no-repeat center center fixed;
+  background: url('https://img.freepik.com/premium-photo/notebook-with-clean-white-sheets-writing-with-pen-white-background-crumpled-dry-branches-nearby-record-report-message-letter-place-text_173815-15029.jpg?w=2000') no-repeat center center fixed;
     background-size: cover;
   }
   
