--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,15 +1,27 @@
 .navbar {
+    list-style: none;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: left;
-}
-
-.navbar__item {
-    flex-basis: 20%;
-    list-style-type: none;
-}
-
-.navbar__logout {
-    margin-left: auto;
-}
-
+    justify-content: center;
+    padding: 0;
+  }
+  
+  .navbar__item {
+    border: 1px solid #ccc;
+    margin: 0 5px;
+    text-align: center;
+  }
+  
+  .navbar__link {
+    text-decoration: none;
+    padding: 10px;
+    color: #333;
+  }
+  
+  .navbar__item.active {
+    background-color: #f5f5f5;
+  }
+  
+  .navbar__logout {
+    background-color: #f5f5f5;
+  }
+  
