--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -3,12 +3,16 @@
     display: flex;
     justify-content: center;
     padding: 0;
+    background-color: beige; /* Replace with your desired color */
+    border: 2px solid lightblue;
+    border-radius: 10px;
+    padding: 10px;
   }
   
   .navbar__item {
-    border: 1px solid #ccc;
-    margin: 0 5px;
+    margin: 0 3px; /* Adjust the margin as needed */
     text-align: center;
+    transition: background-color 0.3s ease, color 0.3s ease;
   }
   
   .navbar__link {
@@ -23,5 +27,15 @@
   
   .navbar__logout {
     background-color: #f5f5f5;
+  }
+  
+  .imgPencil {
+    width: 20px; /* Adjust the width as needed */
+  }
+  
+  .imgContainer {
+    border: 1px solid #ccc;
+    padding: 5px;
+    border-radius: 50%;
   }
   
