--- a/src/components/auth/DragnDrop/dragndrop.css
+++ b/src/components/auth/DragnDrop/dragndrop.css
@@ -7,11 +7,14 @@
 }
 
 .drag-n-drop {
-    padding: .75 rem;
+    padding: .75rem;
+    gap: .5rem;
     display: grid;
     width: 100%;
     height: 100%;
     grid-template-columns: repeat(auto-fill, 300px);
+    align-items: start;
+
 }
 
 .dnd-group {
@@ -26,9 +29,29 @@
     color: navy;
     min-height: 150px;
     border-radius: 5px;
+    display: flex;
+justify-content: center;
+align-items: center;
+font-weight: bold;
 }
+.dnd-item:not(:last-of-type) {
+    margin-bottom: .5rem;
+}
+/* :last of type means that the last item won't get the border */
 
 .dnd-item * {
     margin: 0;
-    text-align: start;
+    font-size: 1rem;
 }
+
+.group-title {
+    text-align: left;
+    margin-bottom: .5rem;
+    font-size: 1.5rem;
+
+}
+
+.current {
+    background-color: cyan;
+}
+
