--- a/src/components/Tutors/TutorList.css
+++ b/src/components/Tutors/TutorList.css
@@ -6,7 +6,6 @@ body {
 
 .tutor-cards {
     display: flex;
-    flex-wrap: wrap;
     gap: 20px;
     background: silver;
   }
@@ -22,17 +21,17 @@ body {
 .card .experienceTutor,
 .card .specialtyTutor,
 .card .quoteTutor,
-.card .book {
+.card .bookTutor, .card .emailTutor{
   border: 1px dotted black;
   padding: 5px;
   background: rgb(221, 242, 242);
   width: 200px;
+  font-size: 10px;
+  font-family: georgia;
+  margin: 3px;
 }
 
-.imgTutor {
-    width: .0002px;
-    margin-right: 10px; /* Added */
-  }
+
 
  .imgSize {
   size: 0 px;
@@ -41,7 +40,7 @@ body {
   .card:hover {
     transform: scale(1.01); /* Added */
     color: blue; /* Added */
-    background-color: #f1f1f1
+    background-color: tan;
 
   }
 
@@ -51,4 +50,42 @@ body {
     transition: background-color 0.3s ease; /* Added */
   }
   
+  .imgTutor img {
+    width: 200px; /* Adjust the width as needed */
+    height: 100px; /* Maintain the aspect ratio */
+  }
+  
+  .submission__delete {
+    background-color: lightblue;
+    color: white;
+    border: none;
+    margin: 5px;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .submission__delete:hover {
+    background-color: red;
+  }
+  
+  .packageInformation {
+    text-align: center;
+  }
+  
+  .packageInformation button {
+    background-color: #fca311;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin: 1px;
+  }
+  
+  .packageInformation button:hover {
+    background-color: #e85d04;
+  }
   
