--- a/src/components/Tutors/TutorList.css
+++ b/src/components/Tutors/TutorList.css
@@ -4,14 +4,15 @@ body {
   }
   
 
-.tutor-cards {
+  .tutor-cards {
     display: flex;
     gap: 20px;
-    background: silver;
+    border-radius: 10px; /* Add border radius for rounded corners */
   }
   
+  
   .card {
-    border: 1px solid black;
+    border: 1px solid light blue;
     padding: 10px;
     flex-wrap: wrap;
     gap: 20px;
@@ -25,17 +26,18 @@ body {
   border: 1px dotted black;
   padding: 5px;
   background: rgb(221, 242, 242);
-  width: 200px;
+  width: 180px;
   font-size: 10px;
   font-family: georgia;
-  margin: 3px;
+  margin: 8px;
+  border: 2px solid lightblue;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+      text-align: center;
+      margin-top: 10px;
 }
 
-
-
- .imgSize {
-  size: 0 px;
- }
 
   .card:hover {
     transform: scale(1.01); /* Added */
@@ -53,17 +55,21 @@ body {
   .imgTutor img {
     width: 200px; /* Adjust the width as needed */
     height: 100px; /* Maintain the aspect ratio */
+    border: 2px solid lightblue;
+    border-radius: 10px;
   }
   
   .submission__delete {
     background-color: lightblue;
     color: white;
     border: none;
-    margin: 5px;
+    margin: 5px auto;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-  }
+    display: flex; 
+justify-content: center; }
+  
   
   .submission__delete:hover {
     background-color: red;
@@ -82,10 +88,37 @@ body {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin: 1px;
+    margin: 10px;
   }
   
   .packageInformation button:hover {
     background-color: #e85d04;
   }
+  
+  .tutorHeader {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+  }
+  
+  .tutorHeader .underline {
+    position: relative;
+  }
+  
+  .tutorHeader .underline::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: lightblue; /* Replace with your desired color */
+  }
+  .quoteTutor{
+    display: flex;
+    justify-content: center;
+      text-align: center;
+      margin-top: 10px;
+    }
+    
   
