--- a/src/components/auth/HomePage.css
+++ b/src/components/auth/HomePage.css
@@ -1,52 +1,99 @@
+/* HomePage.css */
+
+.dialogue-bubble {
+  background-color: #f8f8f8;
+  border: 2px solid light blue;
+  border-radius: 10px;
+  padding: 30px;
+  margin-bottom: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 .introduction {
-    position: relative;
-    text-align: center;
-    margin: 20px;
-    color: navy;
-    font-family: tahoma;
-  }
-  
-  .introduction h4 {
-    font-size: 18px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
-  
-  .introduction h5 {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-top: 40px;
-    border: 2px solid navy; /* Add a border around h5 */
-    padding: 10px; /* Optional: Add padding to create some space between the border and content */
-  }
-  
-  .dialogue-bubble {
-    position: relative;
-    display: inline-block;
-    background-color: #f0f0f0;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.introduction h1 {
+  font-size: 36px;
+  color: #ff0066;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+  font-family: georgia;
+}
+.body {
+  font-family: Georgia;
+}
+
+.introduction h3 {
+  font-size: 18px;
+  color: #333;
+  margin-bottom: 30px;
+  font-family: georgia;
+  color: coral;
+}
+
+.introduction .professionalInformation {
+  margin-top: 30px;
+}
+
+.introduction h5 {
+  font-size: 15px;
+  color: #555;
+  margin-bottom: 15px;
+  line-height: 1.5;
+  font-family: georgia;
+}
+
+.introduction h5 div {
+  margin-bottom: 15px;
+}
+
+.introduction h5:last-child {
+  margin-bottom: 0;
+}
+
+.introduction h5:last-child div {
+  margin-bottom: 0;
+}
+
+.introduction .quote {
+  font-style: italic;
+  font-weight: bold;
+color: blue}
+
+.introduction .quote div {
+  margin-bottom: 15px;
+}
+
+.introduction .quote:last-child {
+  margin-bottom: 0;
+}
+
+.introduction .quote:last-child div {
+  margin-bottom: 0;
+}
+.finalMessage {
+  padding: 1 rem;
+  margin: 5px;
+  background-color: beige; /* Replace with your desired color */
+    border: 2px solid lightblue;
     border-radius: 10px;
     padding: 10px;
-    margin-top: 20px;
-  }
-  
-  .dialogue-bubble::before {
-    content: "";
-    position: absolute;
-    top: -20px;
-    left: 50%;
-    transform: translateX(-50%);
-    border: 10px solid transparent;
-    border-bottom-color: #f0f0f0;
-  }
-  .brainBulb {
-    width: 200px; 
-    height: auto;
-  }
-  .snootyMan {
-    width: 150px;
-    height: auto;
-  }
 
-  .body {
-    font-family: georgia;
-  }
+}
+
+.quoteCoral{
+  color: coral;
+}
+
+.finalMessage h5{
+  padding: 1 rem;
+  margin: 5px;
+  background-color: beige; /* Replace with your desired color */
+    border: 2px solid lightblue;
+    border-radius: 10px;
+    padding: 10px;
+
+}
