--- a/src/components/auth/HomePage.css
+++ b/src/components/auth/HomePage.css
@@ -31,7 +31,7 @@
   color: #333;
   margin-bottom: 30px;
   font-family: georgia;
-  color: coral;
+  color: lightskyblue;
 }
 
 .introduction .professionalInformation {
@@ -85,7 +85,7 @@ color: blue}
 }
 
 .quoteCoral{
-  color: coral;
+  color: lightskyblue;
 }
 
 .finalMessage h5{
@@ -96,4 +96,9 @@ color: blue}
     border-radius: 10px;
     padding: 10px;
 
+}
+
+.greeting{
+  font-family: georgia;
+  font-size: larger;
 }
