--- a/src/components/API/API.css
+++ b/src/components/API/API.css
@@ -419,3 +419,43 @@ p {
   color: black !important;
 }
 
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.left-button {
+  margin-right: 0.5rem;
+}
+
+.right-button {
+  margin-left: 0.5rem;
+}
+
+.centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.small-button {
+  font-size: 0.8rem;
+  padding: 0.3rem 0.5rem;
+}
+
+.heading-Book-List {
+  font-size: 1.5rem;
+  margin: .5rem;
+  font-family: georgia;
+  border: 10px solid lightblue;
+  background-color: white;
+  padding: .5rem;
+}
