--- a/src/components/Reviews/ReviewList.css
+++ b/src/components/Reviews/ReviewList.css
@@ -66,3 +66,41 @@
     grid-area: review15;
   }
   
+  .reviewFont{
+    font-family: georgia;
+  }
+
+  .select-tutor {
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .review-input {
+    width: 100%;
+    height: 10rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+  }
+  
+  .btn-primary {
+    margin-top: 1rem;
+  }
+  
+  #studentReviews {
+    display: flex;
+    justify-content: center;
+    font-family: georgia;
+    font-size: 1.5rem;
+  }
+
+  .individualReviewForYou {
+    font-family: georgia;
+    font-size: 1.25rem;
+
+  }
