--- a/src/components/Tutors/TutorList.css
+++ b/src/components/Tutors/TutorList.css
@@ -12,7 +12,7 @@ body {
   
   
   .card {
-    border: 1px solid light blue;
+    border: 6px solid lightskyblue;
     padding: 10px;
     flex-wrap: wrap;
     gap: 20px;
@@ -99,6 +99,7 @@ justify-content: center; }
     display: flex;
     justify-content: center;
     font-size: 30px;
+    font-family: georgia;
   }
   
   .tutorHeader .underline {
