--- a/src/components/views/ApplicationViews.css
+++ b/src/components/views/ApplicationViews.css
@@ -2,5 +2,7 @@
     margin-top: 0.1rem;
     text-indent: 1.5rem;
     color: lightslategray;
+    font-family: georgia;
+    font-size: .7rem;
   }
   
